home-cards-shadow

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,59 @@
     <!--==================== MAIN ====================-->
     <main class="main">
         <!--==================== HOME ====================-->
-        <section class="home section" id="home"></section>
+        <section class="home section" id="home">
+            <img src="/assets/img/home-bg2.jpg" alt="home image" class="home__bg">
+            <div class="home__shadow"></div>
+
+            <div class="home__container container grid">
+                <div class="home__data">
+                    <h3 class="home__subtitle">Welcome to Costa Rica</h3>
+
+                    <h1 class="home__title">Explore The Tropical Nature</h1>
+
+                    <p class="home__description">Live the trips exploring Costa Rica, discover paradises,
+                        waterfalls, rivers, beaches, volcanos, mountains, hot springs and much more,
+                    get your trip now </p>
+
+                    <a href="#" class="button">
+                        Start Your Journey <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+
+                <div class="home__cards grid">
+                    <article class="home__card">
+                        <img src="/assets/img/corcovado.png" alt="card home image" class="home__card-img">
+                        <h3 class="home__card-title">Corcovado</h3>
+                        <div class="home__card-shadow"></div>
+                    </article>
+                </div>
+
+                <div class="home__cards grid">
+                    <article class="home__card">
+                        <img src="/assets/img/La Paz.jpg" alt="card home image" class="home__card-img">
+                        <h3 class="home__card-title">La Paz Waterfall</h3>
+                        <div class="home__card-shadow"></div>
+                    </article>
+                </div>
+
+                <div class="home__cards grid">
+                    <article class="home__card">
+                        <img src="/assets/img/vista-monteverde.png" alt="card home image" class="home__card-img">
+                        <h3 class="home__card-title">Monteverde</h3>
+                        <div class="home__card-shadow"></div>
+                    </article>
+                </div>
+
+                <div class="home__cards grid">
+                    <article class="home__card">
+                        <img src="/assets/img/tamarindo-2.png" alt="card home image" class="home__card-img">
+                        <h3 class="home__card-title">Tamarindo</h3>
+                        <div class="home__card-shadow"></div>
+                    </article>
+                </div>
+
+            </div>
+        </section>
 
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about"></section>
