--- a/app/index.html
+++ b/app/index.html
@@ -105,10 +105,50 @@
         </section>
 
         <!--==================== ABOUT ====================-->
-        <section class="about section" id="about"></section>
+        <section class="about section" id="about">
+            <div class="about__container container grid">
+                <div class="about__data">
+                    <h2 class="section__title">
+                        Learn More <br>
+                        About Travel
+                    </h2>
+
+                    <p class="about__description">
+                        All the trips around the Costa Rica are a great
+                        pleasure and happiness forn anyone, enjoy
+                        the sights when you travel Costa Rica. Travel
+                        safely and without worries, get your trip around
+                        explore the paradises of this beautifull country
+                    </p>
+
+                    <a href="#" class="button">
+                        Explore Travel <i class="ri-arrow-right-line"></i>
+                    </a>
+                </div>
+
+                <div class="about__image">
+                    <img src="/assets/img/about-beach.jpg" alt="about image beach" class="about__img">
+                    <div class="about__shadow"></div>
+                </div>
+            </div>
+        </section>
 
         <!--==================== POPULAR ====================-->
-        <section class="popular section" id="popular"></section>
+        <section class="popular section" id="popular">
+            <h2 class="section__title">
+                Enjoy The Nature <br>
+                Of Costa Rica
+            </h2>
+
+            <div class="popular__container container grid">
+                <article class="popular__card">
+                    <div class="popular__image">
+                        <img src="/assets/img/monte-verde-canopy.png" alt="" class="popular__img">
+                    </div>
+                </article>
+            </div>
+
+        </section>
 
         <!--==================== EXPLORE ====================-->
         <section class="explore section" id="explore"></section>
