--- a/app/index.html
+++ b/app/index.html
@@ -141,11 +141,55 @@
             </h2>
 
             <div class="popular__container container grid">
+
                 <article class="popular__card">
                     <div class="popular__image">
-                        <img src="/assets/img/monte-verde-canopy.png" alt="" class="popular__img">
+                        <img src="/assets/img/monte-verde-canopy.png" alt="popular image" class="popular__img">
+                        <div class="popular__shadow"></div>
+                    </div>
+
+                    <h2 class="popular__title">
+                        Monte Verde
+                    </h2>
+
+                    <div class="popular__location">
+                        <i class="ri-map-pin-line"></i>
+                        <span>Puntarenas</span>
                     </div>
                 </article>
+
+                <article class="popular__card">
+                    <div class="popular__image">
+                        <img src="/assets/img/manuel-antonio-4.jpg" alt="popular image" class="popular__img">
+                        <div class="popular__shadow"></div>
+                    </div>
+
+                    <h2 class="popular__title">
+                        Manuel Antonio
+                    </h2>
+
+                    <div class="popular__location">
+                        <i class="ri-map-pin-line"></i>
+                        <span>Quepos</span>
+                    </div>
+                </article>
+
+                <article class="popular__card">
+                    <div class="popular__image">
+                        <img src="/assets/img/nauyaca color.png" alt="popular image" class="popular__img">
+                        <div class="popular__shadow"></div>
+                    </div>
+
+                    <h2 class="popular__title">
+                        Nauyaca
+                    </h2>
+
+                    <div class="popular__location">
+                        <i class="ri-map-pin-line"></i>
+                        <span>Pérez Zeledón</span>
+                    </div>
+                </article>
+
             </div>
 
         </section>
