--- a/app/index.html
+++ b/app/index.html
@@ -195,8 +195,35 @@
         </section>
 
         <!--==================== EXPLORE ====================-->
-        <section class="explore section" id="explore"></section>
+        <section class="explore section" id="explore">
+            <div class="explore__container">
+                <div class="explore__image">
+                    <img src="/assets/img/bahia-ballena.jpg" alt="explore image" class="explore__img">
+                    <div class="explore__shadow"></div>
+                </div>
 
+                <div class="explore__content container grid">
+                    <div class="explore__data">
+                        <h2 class="section__title">
+                            Explore The <br>
+                            Best Paradises
+                        </h2>
+
+                        <p class="explore__description">
+                            Exploring paradises such as beaches and
+                            valleys when traveling Costa Rica is one of
+                            the greatest experiences when you travel, it
+                            offers you harmony and peace and you
+                            can enjoy with great comfort.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="explore__user">
+                    <img src="" alt="" class="explore__perfil">
+                </div>
+            </div>
+        </section>
         <!--==================== JOIN ====================-->
         <section class="join section"></section>
     </main>
