--- a/app/index.html
+++ b/app/index.html
@@ -135,11 +135,11 @@
 
         <!--==================== POPULAR ====================-->
         <section class="popular section" id="popular">
+
             <h2 class="section__title">
                 Enjoy The Nature <br>
                 Of Costa Rica
             </h2>
-
             <div class="popular__container container grid">
 
                 <article class="popular__card">
@@ -147,11 +147,9 @@
                         <img src="/assets/img/monte-verde-canopy.png" alt="popular image" class="popular__img">
                         <div class="popular__shadow"></div>
                     </div>
-
                     <h2 class="popular__title">
                         Monte Verde
                     </h2>
-
                     <div class="popular__location">
                         <i class="ri-map-pin-line"></i>
                         <span>Puntarenas</span>
@@ -163,11 +161,9 @@
                         <img src="/assets/img/manuel-antonio-4.jpg" alt="popular image" class="popular__img">
                         <div class="popular__shadow"></div>
                     </div>
-
                     <h2 class="popular__title">
                         Manuel Antonio
                     </h2>
-
                     <div class="popular__location">
                         <i class="ri-map-pin-line"></i>
                         <span>Quepos</span>
@@ -179,11 +175,9 @@
                         <img src="/assets/img/nauyaca color.png" alt="popular image" class="popular__img">
                         <div class="popular__shadow"></div>
                     </div>
-
                     <h2 class="popular__title">
                         Nauyaca
                     </h2>
-
                     <div class="popular__location">
                         <i class="ri-map-pin-line"></i>
                         <span>Pérez Zeledón</span>
@@ -210,19 +204,51 @@
                         </h2>
 
                         <p class="explore__description">
-                            Exploring paradises such as beaches and
-                            valleys when traveling Costa Rica is one of
+                            Exploring paradises such as beaches, rivers,
+                            waterfalls,volcanos when traveling Costa Rica is one of
                             the greatest experiences when you travel, it
                             offers you harmony and peace and you
                             can enjoy with great comfort.
                         </p>
                     </div>
-
                 </div>
             </div>
         </section>
+
+<!--==================== VIDEO GALLERY ====================-->
+<section class="video-gallery section" id="video-gallery">
+    <div class="container grid">
+        <div class="video-card">
+            <video class="video" src="/assets/videos/Arenal.mp4" muted loop></video>
+        </div>
+        <div class="video-card">
+            <video class="video" src="/assets/videos/LaPaz.mp4" muted loop></video>
+        </div>
+        <div class="video-card">
+            <video class="video" src="/assets/videos/Manuel Antonio.mp4" muted loop></video>
+        </div>
+        <div class="video-card">
+            <video class="video" src="/assets/videos/RioCeleste1.mp4" muted loop></video>
+        </div>
+    </div>
+</section>
+
         <!--==================== JOIN ====================-->
-        <section class="join section"></section>
+        <section class="join section">
+            <div class="join__container container grid">
+                <div class="join__data">
+                    <h2 class="section__title">
+                        Your Journey <br>
+                        Stars Here
+                    </h2>
+
+                    <p class="join__description">
+                        Get up to date with the latest
+                        travel and information from us.
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!--==================== FOOTER ====================-->
