--- a/app/index.html
+++ b/app/index.html
@@ -246,13 +246,28 @@
                         Get up to date with the latest
                         travel and information from us.
                     </p>
+
+                    <form action="https://example.com/submit" class="join__form">
+                        <input type="email"  placeholder="Enter your email"  class="join__input">
+
+                        <button type="submit" class="join__button button">
+                            Subscribe Our Newsletter <i class="ri-arrow-right-line"></i>
+                        </button>
+                    </form>
+                </div>
+
+                <div class="join__image">
+                    <img src="/assets/img/rio-celeste.png" alt="join image" class="join__img">
+                    <div class="join__shadow"></div>
                 </div>
             </div>
         </section>
     </main>
-
     <!--==================== FOOTER ====================-->
-    <section class="footer"></section>
+    <section class="footer">
+        
+    </section>
+
 
     <!--=============== MAIN JS ===============-->
     <script src="/app/main.js"></script>
