Scrollbar-Scrollup-Activelink

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link">Home</a>
+                        <a href="#home" class="nav__link  active-link">Home</a>
                     </li>
                     <li class="nav__item">
                         <a href="#about" class="nav__link">About</a>
@@ -264,7 +264,7 @@
         </section>
     </main>
     <!--==================== FOOTER ====================-->
-    <section class="footer">
+    <footer class="footer">
         <div class="footer__container container grid">
             <div class="footer__content grid">
                 <div>
@@ -355,8 +355,11 @@
                 </span>
             </div>
         </div>
-    </section>
-
+    </footer>
+<!--=============== SCROLL UP ===============-->
+<a href="#" class="scrollup" id="scroll-up">
+    <i class="ri-arrow-up-line"></i>
+</a>
 
     <!--=============== MAIN JS ===============-->
     <script src="/app/main.js"></script>
