--- a/app/index.html
+++ b/app/index.html
@@ -17,33 +17,40 @@
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#" class="nav__logo">Travel</a>
+            <a href="#" class="nav__logo">
+                Travel
+            </a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#home" class="nav__link  active-link">Home</a>
+                        <a href="#home" class="nav__link active-link">Home</a>
                     </li>
+
                     <li class="nav__item">
                         <a href="#about" class="nav__link">About</a>
                     </li>
+
                     <li class="nav__item">
                         <a href="#popular" class="nav__link">Popular</a>
                     </li>
+
                     <li class="nav__item">
                         <a href="#explore" class="nav__link">Explore</a>
                     </li>
                 </ul>
+
                 <!-- Close Button -->
                 <div class="nav__close" id="nav-close">
                     <i class="ri-close-line"></i>
                 </div>
-            </div>
+        </div>
 
-            <!-- Toggle button (moved outside of nav__menu) -->
-            <div class="nav__toggle" id="nav-toggle">
-                <i class="ri-menu-line"></i>
-            </div>
+        <!-- Toggle button (moved outside of nav__menu) -->
+        <div class="nav__toggle" id="nav-toggle">
+            <i class="ri-menu-line"></i>
+        </div>
+
         </nav>
     </header>
 
@@ -71,8 +78,8 @@
 
                 <div class="home__cards grid">
                     <article class="home__card">
-                        <img src="/assets/img/corcovado.png" alt="card home image" class="home__card-img">
-                        <h3 class="home__card-title">Corcovado</h3>
+                        <img src="/assets/img/volvan-arenal-4.png" alt="card home image" class="home__card-img">
+                        <h3 class="home__card-title">Arenal</h3>
                         <div class="home__card-shadow"></div>
                     </article>
 
@@ -83,8 +90,8 @@
                     </article>
 
                     <article class="home__card">
-                        <img src="/assets/img/vista-monteverde.png" alt="card home image" class="home__card-img">
-                        <h3 class="home__card-title">Monteverde</h3>
+                        <img src="/assets/img/limon-beach.jpg" alt="card home image" class="home__card-img">
+                        <h3 class="home__card-title">Limon</h3>
                         <div class="home__card-shadow"></div>
                     </article>
 
@@ -94,6 +101,7 @@
                         <div class="home__card-shadow"></div>
                     </article>
                 </div>
+
 
             </div>
         </section>
@@ -177,6 +185,21 @@
                         <span>Pérez Zeledón</span>
                     </div>
                 </article>
+
+                <article class="popular__card">
+                    <div class="popular__image">
+                        <img src="/assets/img/rio-fortuna.png" alt="popular image" class="popular__img">
+                        <div class="popular__shadow"></div>
+                    </div>
+                    <h2 class="popular__title">
+                        Rio Fortuna
+                    </h2>
+                    <div class="popular__location">
+                        <i class="ri-map-pin-line"></i>
+                        <span>San Carlos</span>
+                    </div>
+                </article>
+
 
             </div>
 
