Breakpoints-large-devices

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                Travel
+                COSTA RICA
             </a>
 
             <div class="nav__menu" id="nav-menu">
@@ -65,11 +65,11 @@
                 <div class="home__data">
                     <h3 class="home__subtitle">Welcome to Costa Rica</h3>
 
-                    <h1 class="home__title">Explore The Tropical Nature</h1>
+                    <h1 class="home__title">Explore The Nature</h1>
 
                     <p class="home__description">Live the trips exploring Costa Rica, discover paradises,
-                        waterfalls, rivers, beaches, volcanos, mountains, hot springs and much more,
-                    get your trip now </p>
+                        waterfalls, rivers, beaches, volcanos, mountains, hot springs and much more
+                    </p>
 
                     <a href="#" class="button">
                         Start Your Journey <i class="ri-arrow-right-line"></i>
