--- a/app/index.html
+++ b/app/index.html
@@ -117,7 +117,7 @@
 
                     <p class="about__description">
                         All the trips around the Costa Rica are a great
-                        pleasure and happiness forn anyone, enjoy
+                        pleasure and happiness for anyone, enjoy
                         the sights when you travel Costa Rica. Travel
                         safely and without worries, get your trip around
                         explore the paradises of this beautifull country
@@ -377,6 +377,10 @@
 <a href="#" class="scrollup" id="scroll-up">
     <i class="ri-arrow-up-line"></i>
 </a>
+
+<!--=============== SCROLLREVEAL ===============-->
+<script src="/js/scrollreveal.min.js"></script>
+
 
     <!--=============== MAIN JS ===============-->
     <script src="/app/main.js"></script>
