--- a/app/index.html
+++ b/app/index.html
@@ -232,23 +232,54 @@
             </div>
         </section>
 
+
 <!--==================== VIDEO GALLERY ====================-->
 <section class="video-gallery section" id="video-gallery">
-    <div class="container grid">
-        <div class="video-card">
-            <video class="video" src="/assets/videos/Arenal.mp4" muted loop></video>
+    <div class="container">
+
+        <!-- Acordeón Item 1 -->
+        <div class="accordion-item">
+            <button class="accordion-header">Arenal</button>
+            <div class="accordion-content">
+                <div class="video-card">
+                    <video class="video" src="/assets/videos/Arenal.mp4" muted loop></video>
+                </div>
+            </div>
         </div>
-        <div class="video-card">
-            <video class="video" src="/assets/videos/LaPaz.mp4" muted loop></video>
+
+        <!-- Acordeón Item 2 -->
+        <div class="accordion-item">
+            <button class="accordion-header">La Paz</button>
+            <div class="accordion-content">
+                <div class="video-card">
+                    <video class="video" src="/assets/videos/LaPaz.mp4" muted loop></video>
+                </div>
+            </div>
         </div>
-        <div class="video-card">
-            <video class="video" src="/assets/videos/Manuel Antonio.mp4" muted loop></video>
+
+        <!-- Acordeón Item 3 -->
+        <div class="accordion-item">
+            <button class="accordion-header">Manuel Antonio</button>
+            <div class="accordion-content">
+                <div class="video-card">
+                    <video class="video" src="/assets/videos/Manuel Antonio.mp4" muted loop></video>
+                </div>
+            </div>
         </div>
-        <div class="video-card">
-            <video class="video" src="/assets/videos/RioCeleste1.mp4" muted loop></video>
+
+        <!-- Acordeón Item 4 -->
+        <div class="accordion-item">
+            <button class="accordion-header">Río Celeste</button>
+            <div class="accordion-content">
+                <div class="video-card">
+                    <video class="video" src="/assets/videos/RioCeleste1.mp4" muted loop></video>
+                </div>
+            </div>
         </div>
+
     </div>
 </section>
+
 
         <!--==================== JOIN ====================-->
         <section class="join section">
